# cloudwatch-to-splunk

./: caller.py  cloudwatch-to-splunk.py  splunk_endpoint.py
OLD/: cloudwatch-to-splunk-OLD.py  cloudwatch-to-splunk.py
lambda/app/: lambda.py
lambda/docker/: Dockerfile  Makefile  README.md  deploy.sh  lambda.py  requirements.txt  role.json
lambda/example/: Dockerfile  Makefile  lambda_function.py
lambda/test/: build-lambda-event  build_cloudwatch_payload  cloudwatch.j2  env  lambda.py  make-random-cloudwatch-json  make_random_cloudwatch_json
lambda/test/app/: .gitignore  Makefile  app.py  pyproject.toml  setup.cfg-
