[build-system]
requires = [
  "build",
  "setuptools >= 69.5.0",
  "wheel",
]

build-backend = "setuptools.build_meta"

[project]
name = "cloudwatch-to-splunk"
dynamic = ["version"]
authors = [
  { name="Jon R. Roma", email="roma@illinois.edu" },
]
description = "Lambda function"
#readme = "README.md"
readme = {file = "README.md", content-type = "text/markdown"}
#license = { file="LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "botocore",
    "requests",
]

[tool.setuptools]
packages = ["app"]
